[package]
name = "podcast_downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
reqwest = "0.12.20"
rss = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
futures = "0.3"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
